# Rivanna2S

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  log  monitor.ps1  monitor.py  monitor_output.txt  orion_bms.sh  passwd  poweraux_output.out  upload.py  upload_batteryboard.ps1  upload_batteryboard.sh  upload_driverboard.ps1  upload_driverboard.sh  upload_ecu.ps1  upload_motor.ps1  upload_motor.sh  upload_power_aux.ps1  upload_solar.ps1
BatteryBoard/: CMakeLists.txt
BatteryBoard/include/: pindef.h
BatteryBoard/lib/: CMakeLists.txt
BatteryBoard/lib/include/: BPSCANInterface.h  BatteryBoardCANInterface.h  CANMessageLimiter.h
BatteryBoard/lib/src/: BPSCANInterface.cpp  BatteryBoardCANInterface.cpp  CANMessageLimiter.cpp
BatteryBoard/src/: main.cpp
Common/: CMakeLists.txt
Common/include/: CANStructs.h  MPPTCANStruct.h  MainCANInterface.h
Common/include/dbc/structs/: mppt.h  rivanna2.h
Common/src/: MainCANInterface.cpp  mppt_testing.cpp
Common/src/dbc/structs/: mppt.c  rivanna2.c
DriverBoard/: CMakeLists.txt
DriverBoard/include/: pindef.h
DriverBoard/lib/: CMakeLists.txt
DriverBoard/lib/include/: DriverCANInterface.h  DriverRateLimiter.h
DriverBoard/lib/src/: DriverCANInterface.cpp  DriverRateLimiter.cpp  message_id_frequency.txt
DriverBoard/src/: main.cpp
ECU/include/: pindef.h
ECU/lib/include/: ECUCANInterface.h  ECUCANRateLimiter.h
ECU/lib/src/: ECUCANRateLimiter.cpp
ECU/src/: main.cpp  main.h
HiL_tests/: cat.py  dog.py  fish.py  flamingo.py  octopus.py  requirements.txt  tests.txt  walrus.py
Motor/lib/include/: MotorCANInterface.h  MotorControllerCANInterface.h  MotorRateLimiter.h
Motor/lib/src/: MotorControllerCANInterface.cpp
Motor/src/: main.cpp
PowerAux/: CMakeLists.txt
PowerAux/lib/: CMakeLists.txt
PowerAux/lib/include/: PowerAuxCANInterface.h  SignalFlashHandler.h  TestSignalControl.h
PowerAux/lib/src/: SignalFlashHandler.cpp  TestSignalControl.cpp
PowerAux/src/: main.cpp
PowerAux/test/UNITTESTS/: mbed_unittest.json
TARGET_UVA_SOLAR_CAR/: PinNames.h
output/: Untitled.ipynb  outpout.txt
output/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scripts/: vizthrottle.py
test/: CMakeLists.txt  ethan.cpp  ethan.h  exampleTest.cpp
test/tests/: exampleTest.cpp
